# p1_pakkelevering

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  P1-Fravær.xml  README.md  action_submit_to_file.php  action_submit_to_file.php.save  convert_distance_from_points.c  gantt-tidsplan-p1.planner  index.html  index.php  index2.php  leaflet-eks.html  p1_pakkelevering  starter-template.css  styles.css  test.php  test.txt
docs/html/: a__star_8c.html  a__star_8c.js  a__star_8c_source.html  a__star_8h.html  a__star_8h.js  a__star_8h_source.html  address__to__point__calc_8c.html  address__to__point__calc_8c.js  address__to__point__calc_8c_source.html  address__to__point__calc_8h.html  address__to__point__calc_8h.js  address__to__point__calc_8h_source.html  addresses__prompt_8c.html  addresses__prompt_8c.js  addresses__prompt_8c_source.html  addresses__prompt_8h.html  addresses__prompt_8h.js  addresses__prompt_8h_source.html  annotated.html  annotated_dup.js  c_j_s_o_n_8c.html  c_j_s_o_n_8c.js  c_j_s_o_n_8c_source.html  c_j_s_o_n_8h.html  c_j_s_o_n_8h.js  c_j_s_o_n_8h_source.html  classes.html  cleaner_8c.html  cleaner_8c.js  cleaner_8c_source.html  cleaner_8h.html  cleaner_8h.js  cleaner_8h_source.html  dir_4ed10c85b8ea42b93c0a448932cf619a.html  (+122 more)
map_and_parser/: P1_projekt_adresse_promt.c  finishedmap.xml  map  parser.c
misc/: P1-Fravær.xml
misc/tests/: set1.txt  (+2 more)
src/: CMakeLists.txt  CMakeLists.txt.TEST_DATA_GEN  a_star.c  a_star.h  dynamic_array.c  dynamic_array.h  greedy.c  held-karp.c  leveringsfil.txt  main.c  main_config.h  main_config.h.in  pairing_heap.c  pairing_heap.h  pairing_test.c  test_data_gen.c  valgrind.xml
src/app_data/: addresses_mini.json  closed_list_default_rasp.csv  closed_list_reverse_rasp.csv  greedy_vs_hk_rasp.csv  leveringsfil.txt  map_data_mini.json  test_dat_shit.sh  test_data.txt  test_data_a_star_alexander.csv  test_data_a_star_alexanders_pc.csv  test_data_astar_med_km_rasp.csv  test_data_dijkstra_rasp.csv  test_data_djikstra_alexander.csv  test_data_qsort_alexander.csv  test_data_rasp_a_star_sorted_array.csv  test_greedy_vs_held_karp.csv  test_medium_old_lukkedliste_alexander.csv
src/app_data/tests/count10/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count11/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count12/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count13/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count14/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count15/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count16/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count17/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count18/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count19/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count20/: set2.txt  set3.txt
src/app_data/tests/count21/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count22/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count23/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count24/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count25/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count26/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count27/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count28/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count29/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count3/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count30/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count4/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count5/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count6/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count7/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count8/: set1.txt  set2.txt  set3.txt
src/app_data/tests/count9/: set1.txt  set2.txt  set3.txt
src/combinatorial_optimisation/: CMakeLists.txt  brute-force.c  greedy.c  greedy.h  held_karp.c  held_karp.h  ioconverter.c  ioconverter.h
src/libs/: CMakeLists.txt  Test.c  Vincent_inv_dist_points.c  Vincent_inv_dist_points.h  cleaner.c  cleaner.h  convert_distance_from_points.c  convert_distance_from_points.c~  convert_distance_from_points.h  convert_distance_from_points.h~  converter.c  dynamic_array.c  dynamic_array.h  ioconverter.c  ioconverter.h  old_convert_distance_from_points.c  testconverter.c  vincent_inv_dist_points.c  vincent_inv_dist_points.h
src/map_and_parser/: .gitignore.save  CMakeLists.txt  address_to_point_calc.c  address_to_point_calc.h  addresses_prompt.c  addresses_prompt.h  dynamic_array.h  leveringsfil.txt  main.c  map.json  map_parser.c  map_parser.h  parser.c  parser_addresses.c  parser_addresses.h
src/map_gen/: CMakeLists.txt  address_to_point_calc.c  address_to_point_calc.h  addresses_prompt.c  addresses_prompt.h  map_parser.c  map_parser.h  map_parser.h.in  parser_addresses.c  parser_addresses.h  parser_addresses.h.in
src/pathfinding/: CMakeLists.txt  a_star.c  a_star.h  convert_distance_from_points.c  convert_distance_from_points.h  pairing_heap.c  pairing_heap.h
src/pathfinding/new_pairing_heap/: pairing_heap.c  pairing_heap.h
src/tests/count11/: set1.txt
src/tests/count17/: set1.txt
(+125 files in other folders)
